--- a/projects.json
+++ b/projects.json
@@ -73,7 +73,7 @@
     "category": "Software Development",
     "links": {
       "view": "https://drive.google.com/file/d/1X18nSkWgVJV0mDEtJrSU099MDoaukUPK/view?usp=sharing",
-      "code": ""
+      "code": "https://github.com/YasinduDD/Maze-Solver"
     }
   },
   {
